# ClothSim

./: .gitignore  CMakeLists.txt
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml
Editor/: Editor.vcxproj  Editor.vcxproj.filters
Editor/src/: Editor.cpp  Editor.h  main.cpp
Editor/x64/Release/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Editor.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
saves/: save.json
src/: Application.cpp  Application.h  Arithmetic.cpp  Arithmetic.h  Cloth.cpp  Cloth.h  EmptyScene.cpp  EmptyScene.h  EventHandler.cpp  EventHandler.h  IScene.cpp  IScene.h  Line.cpp  Line.h  Particle.cpp  Particle.h  Renderer.cpp  Renderer.h  SaveManager.cpp  SaveManager.h  Triangle.cpp  Triangle.h  main.cpp
